# Rust

.devcontainer/: devcontainer.json
CheckStockQuote/: Cargo.toml
CheckStockQuote/src/: main.rs
CheckStockQuote/src/conf/: watchlist.cfg
CheckStockQuote/src/core/: kernel.rs  logger.rs  mod.rs  watchlist.rs
CheckStockQuote/src/datamodels/: entity.rs
CheckStockQuote/src/exchange/: api.rs  mod.rs  nasdaq.rs  nse.rs  response.rs
CheckStockQuote/src/utility/: sound.rs
CheckStockQuote/src/view/: report.rs
EmailExample/: Cargo.toml
EmailExample/src/: main.rs
Hello/src/: main.rs
folderscan/: Cargo.toml
folderscan/src/: main.rs
