[package]
name = "CheckStockQuote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
select = "0.4.3"
url = "2.1.0"
scraper = "0.11.0"
regex = "1.3.9"
serde = "1.0.114"
serde_json = "1.0.56"
lazy_static = "1.4.0"
ansi_term = "0.12.1"
rodio = "0.16.0"
log = "0.4.14"
log4rs = "1.0.0"
comfy-table = "5.0.0"
clearscreen = "1.0.9"
rayon = "1.5.1"



### added 
#alsa-sys = "0.3.1"
#libc = "0.2.65"
#[build-dependencies]
#pkg-config = "0.3"
#bindgen = { version = "0.63.0", optional = true }
